--- a/index.html
+++ b/index.html
@@ -23,11 +23,16 @@
    <p>
    <ul>
    <ol>
-       <li><h5>Base de datos distribuida:</h5> <br> Cada parte en un blockchain tiene acceso a toda la base de datos completa y su historia. Ningun partido controla los datos o la informacion. Cada parte puede verificar los registros de sus socios de transaccion directamente, sin intermediario.</li>
-      <li><h5>Peer-to-Peer Transmision:<h5> <br> La comunicacion se produce directamente entre pares, a traves de un nodo central. Cada nodo almacena y transmite informacion a todos los otros nodos.</li>
-      <li><h5>Transparencia con seudnimos:<h5> <br> Cada transaccion y su valor asociado son visibles para cualquiera que tenga acceso al sistema. Cada nodo o usuario, en un blockchain tiene una direccion alfanumerica de mas de 30 caracteres unico que lo identifica. Los usuarios pueden optar por permanecer en el anonimato o proporcionar prueba de su identidad a los demas. Las transacciones se realizan entre las direcciones blockchain.</li>
-      <li><h5>La irreversibilidad de los Records:<h5> <br> Una vez que se introduce una transaccion en la base de datos y las cuentas se actualizan, los registros no pueden ser alterados, porque estan ligados a cada registro de transacciones que vinieron antes que ellos (de ahi el termino cadena). Varios algoritmos y metodos computacionales se han desplegado para garantizar que el registro en la base de datos es permanente, ordenada cronologicamente, y esta disponible para todos los otros en la red.</li>
-      <li><h5>Logica Computacional:<h5> <br> La naturaleza digital del libro mayor significa que las transacciones blockchain se pueden atar a la logica computacional y en esencia programado. Asi, los usuarios pueden crear algoritmos y reglas que activan automticamente las transacciones entre nodos.</li>
+       <li><h5>Base de datos distribuida:</h5> 
+           <p> Cada parte en un blockchain tiene acceso a toda la base de datos completa y su historia. Ningun partido controla los datos o la informacion. Cada parte puede verificar los registros de sus socios de transaccion directamente, sin intermediario.</p></li>
+      <li><h5>Peer-to-Peer Transmision:<h5> 
+          <p> La comunicacion se produce directamente entre pares, a traves de un nodo central. Cada nodo almacena y transmite informacion a todos los otros nodos.</p></li>
+      <li><h5>Transparencia con seudnimos:<h5> 
+          <p> Cada transaccion y su valor asociado son visibles para cualquiera que tenga acceso al sistema. Cada nodo o usuario, en un blockchain tiene una direccion alfanumerica de mas de 30 caracteres unico que lo identifica. Los usuarios pueden optar por permanecer en el anonimato o proporcionar prueba de su identidad a los demas. Las transacciones se realizan entre las direcciones blockchain.</p></li>
+      <li><h5>La irreversibilidad de los Records:<h5> 
+          <p> Una vez que se introduce una transaccion en la base de datos y las cuentas se actualizan, los registros no pueden ser alterados, porque estan ligados a cada registro de transacciones que vinieron antes que ellos (de ahi el termino cadena). Varios algoritmos y metodos computacionales se han desplegado para garantizar que el registro en la base de datos es permanente, ordenada cronologicamente, y esta disponible para todos los otros en la red.</p></li>
+      <li><h5>Logica Computacional:<h5> 
+          <p> La naturaleza digital del libro mayor significa que las transacciones blockchain se pueden atar a la logica computacional y en esencia programado. Asi, los usuarios pueden crear algoritmos y reglas que activan automticamente las transacciones entre nodos.</p></li>
     </ol>
   </ul>
     </p>
