--- a/index.html
+++ b/index.html
@@ -22,16 +22,11 @@
    <p>Aqui hay cinco principios basicos que subyacen a la tecnologia.</p>
    <ul>
    <ol>
-       <li>Base de datos distribuida:
-           <br>Cada parte en un blockchain tiene acceso a toda la base de datos completa y su historia. Ningun partido controla los datos o la informacion. Cada parte puede verificar los registros de sus socios de transaccion directamente, sin intermediario.</li>
-      <li>Peer-to-Peer Transmision:
-           <br>La comunicacion se produce directamente entre pares, a traves de un nodo central. Cada nodo almacena y transmite informacion a todos los otros nodos.</li>
-      <li>Transparencia con seudnimos:<h5> 
-           <br>Cada transaccion y su valor asociado son visibles para cualquiera que tenga acceso al sistema. Cada nodo o usuario, en un blockchain tiene una direccion alfanumerica de mas de 30 caracteres unico que lo identifica. Los usuarios pueden optar por permanecer en el anonimato o proporcionar prueba de su identidad a los demas. Las transacciones se realizan entre las direcciones blockchain.</li>
-      <li>La irreversibilidad de los Records:<h5> 
-           <br>Una vez que se introduce una transaccion en la base de datos y las cuentas se actualizan, los registros no pueden ser alterados, porque estan ligados a cada registro de transacciones que vinieron antes que ellos (de ahi el termino cadena). Varios algoritmos y metodos computacionales se han desplegado para garantizar que el registro en la base de datos es permanente, ordenada cronologicamente, y esta disponible para todos los otros en la red.</ul></li>
-      <li>Logica Computacional:<h5> 
-           <br>La naturaleza digital del libro mayor significa que las transacciones blockchain se pueden atar a la logica computacional y en esencia programado. Asi, los usuarios pueden crear algoritmos y reglas que activan automticamente las transacciones entre nodos.</li>
+       <li>Base de datos distribuida: <br> Cada parte en un blockchain tiene acceso a toda la base de datos completa y su historia. Ningun partido controla los datos o la informacion. Cada parte puede verificar los registros de sus socios de transaccion directamente, sin intermediario.</li>
+      <li>Peer-to-Peer Transmision: <br> La comunicacion se produce directamente entre pares, a traves de un nodo central. Cada nodo almacena y transmite informacion a todos los otros nodos.</li>
+      <li>Transparencia con seudnimos: <br> Cada transaccion y su valor asociado son visibles para cualquiera que tenga acceso al sistema. Cada nodo o usuario, en un blockchain tiene una direccion alfanumerica de mas de 30 caracteres unico que lo identifica. Los usuarios pueden optar por permanecer en el anonimato o proporcionar prueba de su identidad a los demas. Las transacciones se realizan entre las direcciones blockchain.</li>
+      <li>La irreversibilidad de los Records: <br> Una vez que se introduce una transaccion en la base de datos y las cuentas se actualizan, los registros no pueden ser alterados, porque estan ligados a cada registro de transacciones que vinieron antes que ellos (de ahi el termino cadena). Varios algoritmos y metodos computacionales se han desplegado para garantizar que el registro en la base de datos es permanente, ordenada cronologicamente, y esta disponible para todos los otros en la red.</li>
+      <li>Logica Computacional: <br >La naturaleza digital del libro mayor significa que las transacciones blockchain se pueden atar a la logica computacional y en esencia programado. Asi, los usuarios pueden crear algoritmos y reglas que activan automticamente las transacciones entre nodos.</li>
     </ol>
   </ul>
    <h5>La nueva arquitectura</h5>
